# O3DEHoudini

./: CMakeLists.txt  LICENSE  README.md  gem.json
Code/: CMakeLists.txt  houdiniengine_editor_shared_files.cmake  houdiniengine_private_files.cmake  houdiniengine_tests_files.cmake
Code/Include/HoudiniEngine/: HoudiniCookedMesh.h  HoudiniEngineBus.h
Code/Platform/Windows/: PAL_windows.cmake
Code/Source/: HoudiniEngineEditorSystemComponent.cpp  HoudiniEngineEditorSystemComponent.h  HoudiniEngineModule.cpp
Code/Source/Asset/: HoudiniBakeBuilder.cpp  HoudiniBakeBuilder.h  HoudiniModelBuilderUtil.cpp  HoudiniModelBuilderUtil.h
Code/Source/Components/: HoudiniDigitalAssetComponent.cpp  HoudiniDigitalAssetComponent.h
Code/Source/HAPI/: HapiUtils.h  HapiWrapper.cpp  HapiWrapper.h
Code/Source/Session/: HoudiniSession.cpp  HoudiniSession.h
Code/Source/Translation/: HoudiniGeometryToMesh.cpp  HoudiniGeometryToMesh.h
Code/Tests/: HoudiniGeometryToMeshTests.cpp  HoudiniModelBuilderUtilTests.cpp  HoudiniSessionIntegrationTests.cpp
Code/Tests/TestHDAs/: README.md  box.hda
